Change pic order, remove old content, add Offene Stelle, change Oeffnungszeiten

--- a/physio.html
+++ b/physio.html
@@ -50,14 +50,14 @@
 <a href="https://goo.gl/photos/vCBQb7pj5NhcQBW59" target="_blank">
     <div class="jcarousel-wrapper">
         <div class="jcarousel">
-            <ul>            
-                <li><img src="img/physio2.jpeg" alt="Physiotherapie Momentaufnahme 2"</li>  
-                <li><img src="img/physio1.jpeg" alt="Physiotherapie Momentaufnahme 1"></li>
-                <li><img src="img/physio3.jpeg" alt="Physiotherapie Momentaufnahme 3"></li>                                  
-                <li><img src="img/physio6.jpeg" alt="Physiotherapie Momentaufnahme 6"></li>
-                <li><img src="img/physio4.jpeg" alt="Physiotherapie Momentaufnahme 4"></li>
-                <li><img src="img/physio5.jpeg" alt="Physiotherapie Momentaufnahme 5"></li>            
+            <ul>                            
                 <li><img src="img/physio7.jpeg" alt="Physiotherapie Momentaufnahme 7"></li>
+                <li><img src="img/physio2.jpeg" alt="Physiotherapie Momentaufnahme 2"></li>
+                <li><img src="img/physio3.jpeg" alt="Physiotherapie Momentaufnahme 3"></li>                      
+                <li><img src="img/physio5.jpeg" alt="Physiotherapie Momentaufnahme 5"></li>                                                              
+                <li><img src="img/physio6.jpeg" alt="Physiotherapie Momentaufnahme 6"></li>
+                <li><img src="img/physio1.jpeg" alt="Physiotherapie Momentaufnahme 1"></li>                                                              
+                <li><img src="img/physio4.jpeg" alt="Physiotherapie Momentaufnahme 4"></li>                              
             </ul>
         </div>
         <a href="#" class="jcarousel-control-prev">&lsaquo;</a>
@@ -146,7 +146,6 @@
                 <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
             <h2>Geschäftsöffnungszeiten</h2>
-            <p class="preliminary">Ab 07. Dezember 2016 am Mi durchgehend von 8 – 21 Uhr</p>
             <table>
                 <tr>
                     <td>
@@ -160,9 +159,9 @@
                     <td nowrap="true"><!-- TODO: Proper alignment -->
                         07:30 – 20:00 Uhr<br/>
                         08:00 – 21:00 Uhr<br/>
-                        14:00 – 21:00 Uhr<br/>
+                        08:00 – 21:00 Uhr<br/>
                         07:30 – 20:00 Uhr<br/>
-                        08:00 – 12:00 Uhr und 15:00 – 21:00 Uhr<br/>
+                        08:00 – 12:00 Uhr, 15:00 – 21:00 Uhr<br/>
                         09:00 – 13:00 Uhr
                     </td>
                 </tr>
