--- a/fitness.html
+++ b/fitness.html
@@ -55,9 +55,9 @@
                 <li><img src="img/fitness1.jpeg" alt="Fitness Momentaufnahme 1"></li>
                 <li><img src="img/fitness2.jpeg" alt="Fitness Momentaufnahme 2"></li>
                 <li><img src="img/fitness3.jpeg" alt="Fitness Momentaufnahme 3"></li>            
-                <li><img src="img/fitness5.jpeg" alt="Fitness Momentaufnahme 5"></li>            
-                <li><img src="img/fitness7.jpeg" alt="Fitness Momentaufnahme 7"></li>
+                <li><img src="img/fitness5.jpeg" alt="Fitness Momentaufnahme 5"></li>                            
                 <li><img src="img/fitness4.jpeg" alt="Fitness Momentaufnahme 4"></li>
+                <li><img src="img/fitness7.jpeg" alt="Fitness Momentaufnahme 7"></li>
             </ul>
         </div>
         <a href="#" class="jcarousel-control-prev">&lsaquo;</a>
@@ -231,7 +231,6 @@
                 <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
             <h2>Geschäftsöffnungszeiten</h2>
-            <p class="preliminary">Ab 07. Dezember 2016 am Mi durchgehend von 8 – 21 Uhr</p>
             <table>
                 <tr>
                     <td>
@@ -245,9 +244,9 @@
                     <td nowrap="true"><!-- TODO: Proper alignment -->
                         07:30 – 20:00 Uhr<br/>
                         08:00 – 21:00 Uhr<br/>
-                        14:00 – 21:00 Uhr<br/>
+                        08:00 – 21:00 Uhr<br/>
                         07:30 – 20:00 Uhr<br/>
-                        08:00 – 12:00 Uhr und 15:00 – 21:00 Uhr<br/>
+                        08:00 – 12:00 Uhr, 15:00 – 21:00 Uhr<br/>
                         09:00 – 13:00 Uhr
                     </td>
                 </tr>
