--- a/reto-maurer.html
+++ b/reto-maurer.html
@@ -187,7 +187,6 @@
                 <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
             <h2>Geschäftsöffnungszeiten</h2>
-            <p class="preliminary">Ab 07. Dezember 2016 am Mi durchgehend von 8 – 21 Uhr</p>
             <table>
                 <tr>
                     <td>
@@ -201,9 +200,9 @@
                     <td nowrap="true"><!-- TODO: Proper alignment -->
                         07:30 – 20:00 Uhr<br/>
                         08:00 – 21:00 Uhr<br/>
-                        14:00 – 21:00 Uhr<br/>
+                        08:00 – 21:00 Uhr<br/>
                         07:30 – 20:00 Uhr<br/>
-                        08:00 – 12:00 Uhr und 15:00 – 21:00 Uhr<br/>
+                        08:00 – 12:00 Uhr, 15:00 – 21:00 Uhr<br/>
                         09:00 – 13:00 Uhr
                     </td>
                 </tr>
