Change alignment of opening hours

--- a/index.html
+++ b/index.html
@@ -315,36 +315,44 @@
             <h2>Spezielle Öffnungszeiten über die Festtage</h2>
             <table>
                 <tr>
-                    <td nowrap='true'>Sa, 24.12.:</td>
+                    <td nowrap='true'>Sa,</td>
+                    <td>24.12.:</td>
                     <td>geschlossen
                     
                 </tr>
                 <tr>
-                    <td nowrap='true'>Mo, 26.12.:</td>
+                    <td nowrap='true'>Mo,
+                    <td>26.12.:</td>
                     <td>geschlossen</td>
                 </tr>
                 <tr>
-                    <td nowrap='true'>Di, 27.12.:</td>
+                    <td nowrap='true'>Di,
+                    <td>27.12.:</td>
                     <td>09:00 - 17:00 Uhr</td>
                 </tr>
                 <tr>
-                    <td nowrap='true'>Mi, 28.12.:</td>
+                    <td nowrap='true'>Mi,
+                    <td>28.12.:</td>
                     <td>08:00 – 14:00 Uhr (ohne Betreuung)</td>
                 </tr>
                 <tr>                    
-                    <td nowrap='true'>Do, 29.12.:</td>
+                    <td nowrap='true'>Do,
+                    <td>29.12.:</td>
                     <td>09:00 - 15:00 Uhr</td>
                 </tr>
                 <tr>
-                    <td nowrap='true'>Fr, 30.12.:</td>
+                    <td nowrap='true'>Fr,
+                    <td>30.12.:</td>
                     <td>09:00 - 17:00 Uhr (09:00 - 11:00 ohne Betreuung)</td>
                 </tr>
                 <tr>
-                    <td nowrap='true'>Sa, 31.12.:</td>
+                    <td nowrap='true'>Sa,
+                    <td>31.12.:</td>
                     <td>geschlossen</td>
                 </tr>
                 <tr>
-                    <td nowrap='true'>Mo, 02.01.:</td>
+                    <td nowrap='true'>Mo,
+                    <td>02.01.:</td>
                     <td>geschlossen</td>
                 </tr>
             </table>
