Remove holiday opening hours, reorganize table

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         <div class="col-sm-6">
             <div class="new well">
                 <h1>Offene Stelle</h1>
-                <p>Wir suchen per Januar 2017 eine/n dipl. Physiotherapeut/in,<br/>
+                <p>Wir suchen per sofort eine/n dipl. Physiotherapeut/in,<br/>
                     Pensum 20-60%. Bei Interesse bitte melden bei:
                 </p>
                 <p>
@@ -312,51 +312,6 @@
             </div>
         </div>
         <div class="footer col-xs-12">
-            <h2>Spezielle Öffnungszeiten über die Festtage</h2>
-            <table>
-                <tr>
-                    <td nowrap='true'>Sa,</td>
-                    <td nowrap='true'>24.12.:</td>
-                    <td>geschlossen
-                    
-                </tr>
-                <tr>
-                    <td nowrap='true'>Mo,
-                    <td nowrap='true'>26.12.:</td>
-                    <td>geschlossen</td>
-                </tr>
-                <tr>
-                    <td nowrap='true'>Di,
-                    <td nowrap='true'>27.12.:</td>
-                    <td>09:00 - 17:00 Uhr</td>
-                </tr>
-                <tr>
-                    <td nowrap='true'>Mi,
-                    <td nowrap='true'>28.12.:</td>
-                    <td>08:00 – 14:00 Uhr (ohne Betreuung)</td>
-                </tr>
-                <tr>                    
-                    <td nowrap='true'>Do,
-                    <td nowrap='true'>29.12.:</td>
-                    <td>09:00 - 15:00 Uhr</td>
-                </tr>
-                <tr>
-                    <td nowrap='true'>Fr,
-                    <td nowrap='true'>30.12.:</td>
-                    <td>09:00 - 17:00 Uhr (09:00 - 11:00 ohne Betreuung)</td>
-                </tr>
-                <tr>
-                    <td nowrap='true'>Sa,
-                    <td nowrap='true'>31.12.:</td>
-                    <td>geschlossen</td>
-                </tr>
-                <tr>
-                    <td nowrap='true'>Mo,
-                    <td nowrap='true'>02.01.:</td>
-                    <td>geschlossen</td>
-                </tr>
-            </table>
-            <p class="preliminary">Ab Di, 03.01.2017 gelten wieder die normalen Öffnungszeiten.<br/><br/>Wir wünschen allen fröhliche Weihnachten und ein gesundes neues Jahr!</p>
             <h2>Kontakt</h2>
             <p>
                 Movimento Physio-und Trainingstherapie GmbH<br/>
@@ -368,22 +323,28 @@
             <h2>Geschäftsöffnungszeiten</h2>
             <table>
                 <tr>
-                    <td>
-                        Mo:&nbsp;<br/>
-                        Di:&nbsp;<br/>
-                        Mi:&nbsp;<br/>
-                        Do:&nbsp;<br/>
-                        Fr:&nbsp;<br/>
-                        Sa:&nbsp;
-                    </td>
-                    <td nowrap="true"><!-- TODO: Proper alignment -->
-                        07:30 – 20:00 Uhr<br/>
-                        08:00 – 21:00 Uhr<br/>
-                        08:00 – 21:00 Uhr<br/>
-                        07:30 – 20:00 Uhr<br/>
-                        08:00 – 12:00 Uhr, 15:00 – 21:00 Uhr<br/>
-                        09:00 – 13:00 Uhr
-                    </td>
+                    <td nowrap='true'>Mo:</td>
+                    <td>07:30 – 20:00 Uhr</td>
+                </tr>
+                <tr>
+                    <td nowrap='true'>Di:</td>
+                    <td>07:30 – 20:00 Uhr</td>
+                </tr>
+                <tr>
+                    <td nowrap='true'>Mi:</td>
+                    <td>08:00 – 21:00 Uhr</td>
+                </tr>
+                <tr>
+                    <td nowrap='true'>Do:</td>
+                    <td>07:30 – 20:00 Uhr</td>
+                </tr>
+                <tr>
+                    <td nowrap='true'>Fr:</td>
+                    <td>08:00 – 12:00 Uhr, 15:00 – 21:00 Uhr</td>
+                </tr>
+                <tr>
+                    <td nowrap='true'>Sa:</td>
+                    <td>09:00 – 13:00 Uhr</td>
                 </tr>
             </table>            
         </div>
