Reorganize table wrapping

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                 </tr>
                 <tr>
                     <td nowrap='true'>Fr:</td>
-                    <td>08:00 – 12:00 Uhr, 15:00 – 21:00 Uhr</td>
+                    <td><nobr>08:00 – 12:00 Uhr, <wbr/>15:00 – 21:00 Uhr</nobr></td>
                 </tr>
                 <tr>
                     <td nowrap='true'>Sa:</td>
