Add special opening hours, new employee

--- a/index.html
+++ b/index.html
@@ -268,14 +268,10 @@
     <div class="row">
         <div class="col-sm-6">
             <div class="new well">
-                <h1>Offene Stelle</h1>
-                <p>Wir suchen per sofort eine/n dipl. Physiotherapeut/in,<br/>
-                    Pensum 60-90%. Bei Interesse bitte melden bei:
+                <h1>Spezielle Öffnungszeiten</h1>
+                <p>Während der regionalen Fasnachtszeit 20.2.-11.3.2017 beachten Sie bitte unsere <a href="#SpezielleOeffnungszeiten">speziellen Öffnungszeiten</a>. 
                 </p>
-                <p>
-                    <a href="mailto:melina.duerr@physiomovimento.ch">Melina Dürr</a>, 
-                    <a href="tel:+41 79 776 30 66">079 776 30 66</a>
-                </p>
+                <p>Ab 13.3.2017 haben wir <a href="#NeueOeffnungszeiten">länger für Sie geöffnet</a>!
             </div>
         </div>
         <div class="col-sm-6">
@@ -320,7 +316,7 @@
                 061 963 00 23<br/>
                 <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
-            <h2>Geschäftsöffnungszeiten</h2>
+            <h2>Geschäftsöffnungszeiten bis 18.2.2017</h2>
             <table>
                 <tr>
                     <td nowrap='true'>Mo:</td>
@@ -346,7 +342,147 @@
                     <td nowrap='true'>Sa:</td>
                     <td>09:00 – 13:00 Uhr</td>
                 </tr>
-            </table>            
+            </table>   
+            <a name="SpezielleOeffnungszeiten"></a>            
+            <h2 class="preliminary">Spezielle Öffnungszeiten 20.2. - 11.3.2017</h2>
+            <table>
+                <tr>                
+                    <th/>
+                    <th>Offen</th>                    
+                    <th>Betreut</th>                       
+                </tr>
+                <tr>
+                    <td>Mo, 20.2.:</td>
+                    <td>07:30 – 20:00</td>
+                    <td>14.30 - 20.00</td>
+                </tr>
+                <tr>
+                    <td>Di, 21.2.:</td>
+                    <td><nobr><strong>08.00 - 12.00, <wbr/>15.00 - 21.00</strong></nobr></td>
+                    <td>10.00 - 12.00</td>
+                </tr>
+                <tr>
+                    <td>Mi, 22.2.:</td>
+                    <td>08.00 - 21.00</td>
+                    <td>14.30 - 21.00</td>
+                </tr>
+                <tr>
+                    <td>Do, 23.2.:</td>
+                    <td>07.30 - 20.00</td>
+                    <td>10.00 - 12.00</td>
+                </tr>
+                <tr>
+                    <td>Fr, 24.2.:</td>
+                    <td>08.00 - 21.00</td>
+                    <td>14.00 - 21.00</td>
+                </tr>
+                <tr>
+                    <td>Sa, 25.2.:</td>
+                    <td>09.00 - 13.00</td>
+                    <td>09.00 - 13.00</td>
+                </tr>
+                <tr><td>&nbsp;</td><tr/>
+                <tr>
+                    <td>Mo, 27.2.:</td>
+                    <td>07.30 - 20.00</td>
+                    <td>14.00 - 20.00</td>
+                </tr>
+                <tr>
+                    <td>Di, 27.2.:</td>
+                    <td><nobr><strong>08.00 - 12.00, <wbr/>15.00 - 21.00</strong></nobr></td>
+                    <td>10.00 - 12.00</td>
+                </tr>
+                <tr>
+                    <td>Mi, 1.3.:</td>
+                    <td>08.00 - 21.00</td>
+                    <td>14.30 - 21.00</td>
+                </tr>
+                <tr>
+                    <td>Do, 2.3.:</td>
+                    <td>07.30 - 20.00</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Fr, 3.3.:</td>
+                    <td>08.00 - 21.00</td>
+                    <td>14.00 - 21.00</td>
+                </tr>
+                <tr>
+                    <td>Sa, 4.3.:</td>
+                    <td>09.00 - 13.00</td>
+                    <td>09.00 - 13.00</td>
+                </tr>
+                <tr><td>&nbsp;</td><tr/>
+                <tr>
+                    <td>Mo, 6.3.:</td>
+                    <td>07.30 - 20.00</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Di, 7.3.:</td>
+                    <td>08.00 - 21.00</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Mi, 8.3.:</td>
+                    <td>08.00 - 21.00</td>
+                    <td>14.00 - 21.00</td>
+                </tr>
+                <tr>
+                    <td>Do, 9.3.:</td>
+                    <td>07.30 - 20.00</td>
+                    <td>07.30 - 12.00 </td>
+                </tr>
+                <tr>
+                    <td>Fr, 10.3.:</td>
+                    <td>08.00 - 21.00</td>
+                    <td>08.00 - 21.00</td>
+                </tr>
+                <tr>
+                    <td>Sa, 11.3.:</td>
+                    <td>09.00 - 13.00</td>
+                    <td>09.00 - 13.00</td>
+                </tr>                
+            </table>                  
+            <a name="NeueOeffnungszeiten"></a>
+            <h2 class="preliminary">Neue Öffnungszeiten ab 13.3.2017</h2>
+            <table>
+                <tr>
+                    <th/>
+                    <th colspan="">Offen</th>                    
+                    <th>Betreut</th>                                        
+                </tr>
+                <tr>
+                    <td nowrap='true'>Mo:</td>
+                    <td>07:30 – 21:00 Uhr</td>
+                    <td>14.30 - 21.00 Uhr</td>
+                </tr>
+                <tr>
+                    <td nowrap='true'>Di:</td>
+                    <td>08:00 – 21:00 Uhr</td>
+                    <td>10.00 - 12.00 Uhr</td>
+                </tr>
+                <tr>
+                    <td nowrap='true'>Mi:</td>
+                    <td>07:30 – 21:00 Uhr</td>
+                    <td>14.30 - 21.00 Uhr</td>
+                </tr>
+                <tr>
+                    <td nowrap='true'>Do:</td>
+                    <td>07:30 – 21:00 Uhr</td>
+                    <td>10.00 - 12.00 Uhr</td>
+                </tr>
+                <tr>
+                    <td nowrap='true'>Fr:</td>
+                    <td>08:00 – 20:00 Uhr</td>
+                    <td>14.00 - 20.00 Uhr</td>
+                </tr>
+                <tr>
+                    <td nowrap='true'>Sa:</td>
+                    <td>09:00 – 13:00 Uhr</td>
+                    <td>09.00 - 13.00 Uhr</td>
+                </tr>
+            </table>                        
         </div>
     </div>
 </div>
