--- a/ursula.hoevelmann.html
+++ b/ursula.hoevelmann.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="apple-touch-icon image_src" href="apple-touch-icon.png">
 
-    <title>Physio Movimento | Team</title>
+    <title>Physio Movimento | Team | Barbara Longo</title>
 
     <link href="css/bootstrap-custom.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -39,7 +39,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="physio.html">Physio</a></li>
                 <li><a href="fitness.html">Fitness</a></li>
-                <li class="active"><a href="#">Team</a></li>
+                <li class="active"><a href="team.html">Team</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </div>
@@ -104,101 +104,64 @@
             </svg>
         </div>
     </div>
-    <div class="row">
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <p>
-                    <h1>Barbara&nbsp;Longo</h1>
-                    <p>
-                        Dipl.&nbsp;Physiotherapeutin&nbsp;FH<br/>
-                        <a href="mailto:barbara.longo@physiomovimento.ch">barbara.longo@physiomovimento.ch</a>
-                    </p>
-                    <a href="barbara-longo.html" role="button">
-                        Mehr&hellip;
-                    </a>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/barbara.jpg">
-            </div>
+    <div class="row section">
+        <img class="col-lg-2 col-sm-6 col-xs-12" src="img/Blank_woman_placeholder.svg"/>
+        <div class="col-lg-10 col-sm-6 col-xs-12">
+            <!-- reactive vertical space -->
+            <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
+            <h2>Ursula&nbsp;Hövelmann</h2>
+            <p>Physiotherapeutin (Bachelor NL/Professional Master)<br/><a href="mailto:ursula.hoevelmann@physiomovimento.ch">ursula.hoevelmann@physiomovimento.ch</a></p>
         </div>
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <p>
-                    <h1>Melina&nbsp;Dürr</h1>
-                    <p>
-                        Dipl.&nbsp;Physiotherapeutin&nbsp;FH<br/>
-                        <a href="mailto:melina.duerr@physiomovimento.ch">melina.duerr@physiomovimento.ch</a>
-                    </p>
-                    <a href="melina-duerr.html" role="button">
-                        Mehr&hellip;
-                    </a>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/melina.jpg">
-            </div>
+    </div>
+    <div class="row section">
+        <div class="col-xs-12">
+            <h2>Berufserfahrung</h2>
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <p>
-                    <h1>Ursula&nbsp;Hövelmann</h1>
-                    <p>
-                        Physiotherapeutin&nbsp;PM<br/>
-                        <a href="mailto:ursula.hoevelmann@physiomovimento.ch">ursula.hoevelmann@physiomovimento.ch</a>
-                    </p>
-                    <a href="ursula.hoevelmann.html" role="button">
-                        Mehr&hellip;
-                    </a>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/portrait-placeholder.png">
-            </div>
-        </div>
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <p>
-                    <h1>Vera&nbsp;Schmidt</h1>
-                    <p>
-                        Physiotherapeutin i.A.<br/>
-                        <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
-                    </p>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/vera.jpg">
-            </div>
+        <div class="col-lg-2 col-xs-3">Seit 2017</div>
+        <div class="col-xs-9">Movimento Physio-und Trainingstherapie GmbH Oberdorf</div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">2016</div>
+        <div class="col-xs-9">Kreiskrankenhaus Rheinfelden</div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">2013-2015</div>
+        <div class="col-xs-9">Physiogalerie Castrop Rauxel, Fachliche Leitung</div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">2007-2013</div>
+        <div class="col-xs-9">
+           Therapiezentrum Novotergum. Fachliche Leitung und Zentrumsmanagerin
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <p>
-                    <h1>Reto&nbsp;Maurer</h1>
-                    <p>
-                        Sportwissenschaftler&nbsp;EHSM<br/>
-                        <a href="mailto:reto.maurer@physiomovimento.ch">reto.maurer@physiomovimento.ch</a>
-                    </p>
-                    <a href="reto-maurer.html" role="button">
-                        Mehr&hellip;
-                    </a>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/reto.jpg">
-            </div>
-        </div>        
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <p>
-                    <h1>Nazmije&nbsp;Demusi</h1>
-                    <p>
-                        Raumpflegerin<br/>
-                        <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
-                    </p>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/nazmije.jpg">
-            </div>
+        <div class="col-lg-2 col-xs-3">2005-2006</div>
+        <div class="col-xs-9">
+           Tätigkeit in Privatpraxis Funk und Rannacher. Schwerpunkte jeweils Orthopädie, Chirurgie, Onkologie, Rheumatologie.
+
         </div>
+    </div>
+
+    <div class="row section">
+        <div class="col-xs-12">
+            <h2>Aus-und Weiterbildungen</h2>
+        </div>
+    </div>
+    <div class="row">
+        <ul>
+            <li>2017 Beginn Heilpraktiker-Ausbildung (Erlernen der Naturheilkunde)</li>
+            <li>diverse Lehrgänge Chiropraktik</li>
+            <li>Basiskurs Golf-Physiotherapie</li>
+            <li>Skoliosebehandlung nach Schroth</li>
+            <li>Kinesiotaping/stabilisierendes Taping</li>
+            <li>Schmerzpsychologische Grundlagen bei chron. Rückenschmerzpatienten</li>
+            <li>Master of Profession Manuelle Therapie SOMT (evidence based practice)</li>
+            <li>Gerätegestützte Krankengymnastik (KGG)</li>
+            <li>Lympdrainage und Ödemtherapie</li>
+            <li>Bachelor of Health in Physiotherapie Hogeschool van Utrecht, Holland 2004</li>
+        </ul>
     </div>
     <div class="row">
         <div class="col-xs-12">
