Fine-tune opening hours tables

--- a/index.html
+++ b/index.html
@@ -352,94 +352,94 @@
                     <th>Betreut</th>                       
                 </tr>
                 <tr>
-                    <td>Mo, 20.2.:</td>
+                    <td nowrap='true'>Mo, 20.2.:</td>
                     <td>07:30 – 20:00</td>
                     <td>14.30 - 20.00</td>
                 </tr>
                 <tr>
-                    <td>Di, 21.2.:</td>
+                    <td nowrap='true'>Di, 21.2.:</td>
                     <td><nobr><strong>08.00 - 12.00, <wbr/>15.00 - 21.00</strong></nobr></td>
                     <td>10.00 - 12.00</td>
                 </tr>
                 <tr>
-                    <td>Mi, 22.2.:</td>
+                    <td nowrap='true'>Mi, 22.2.:</td>
                     <td>08.00 - 21.00</td>
                     <td>14.30 - 21.00</td>
                 </tr>
                 <tr>
-                    <td>Do, 23.2.:</td>
+                    <td nowrap='true'>Do, 23.2.:</td>
                     <td>07.30 - 20.00</td>
                     <td>10.00 - 12.00</td>
                 </tr>
                 <tr>
-                    <td>Fr, 24.2.:</td>
+                    <td nowrap='true'>Fr, 24.2.:</td>
                     <td>08.00 - 21.00</td>
                     <td>14.00 - 21.00</td>
                 </tr>
                 <tr>
-                    <td>Sa, 25.2.:</td>
+                    <td nowrap='true'>Sa, 25.2.:</td>
                     <td>09.00 - 13.00</td>
                     <td>09.00 - 13.00</td>
                 </tr>
                 <tr><td>&nbsp;</td><tr/>
                 <tr>
-                    <td>Mo, 27.2.:</td>
+                    <td nowrap='true'>Mo, 27.2.:</td>
                     <td>07.30 - 20.00</td>
                     <td>14.00 - 20.00</td>
                 </tr>
                 <tr>
-                    <td>Di, 27.2.:</td>
+                    <td nowrap='true'>Di, 27.2.:</td>
                     <td><nobr><strong>08.00 - 12.00, <wbr/>15.00 - 21.00</strong></nobr></td>
                     <td>10.00 - 12.00</td>
                 </tr>
                 <tr>
-                    <td>Mi, 1.3.:</td>
+                    <td nowrap='true'>Mi, 1.3.:</td>
                     <td>08.00 - 21.00</td>
                     <td>14.30 - 21.00</td>
                 </tr>
                 <tr>
-                    <td>Do, 2.3.:</td>
+                    <td nowrap='true'>Do, 2.3.:</td>
                     <td>07.30 - 20.00</td>
                     <td></td>
                 </tr>
                 <tr>
-                    <td>Fr, 3.3.:</td>
+                    <td nowrap='true'>Fr, 3.3.:</td>
                     <td>08.00 - 21.00</td>
                     <td>14.00 - 21.00</td>
                 </tr>
                 <tr>
-                    <td>Sa, 4.3.:</td>
+                    <td nowrap='true'>Sa, 4.3.:</td>
                     <td>09.00 - 13.00</td>
                     <td>09.00 - 13.00</td>
                 </tr>
                 <tr><td>&nbsp;</td><tr/>
                 <tr>
-                    <td>Mo, 6.3.:</td>
+                    <td nowrap='true'>Mo, 6.3.:</td>
                     <td>07.30 - 20.00</td>
                     <td></td>
                 </tr>
                 <tr>
-                    <td>Di, 7.3.:</td>
+                    <td nowrap='true'>Di, 7.3.:</td>
                     <td>08.00 - 21.00</td>
                     <td></td>
                 </tr>
                 <tr>
-                    <td>Mi, 8.3.:</td>
+                    <td nowrap='true'>Mi, 8.3.:</td>
                     <td>08.00 - 21.00</td>
                     <td>14.00 - 21.00</td>
                 </tr>
                 <tr>
-                    <td>Do, 9.3.:</td>
+                    <td nowrap='true'>Do, 9.3.:</td>
                     <td>07.30 - 20.00</td>
                     <td>07.30 - 12.00 </td>
                 </tr>
                 <tr>
-                    <td>Fr, 10.3.:</td>
+                    <td nowrap='true'>Fr, 10.3.:</td>
                     <td>08.00 - 21.00</td>
                     <td>08.00 - 21.00</td>
                 </tr>
                 <tr>
-                    <td>Sa, 11.3.:</td>
+                    <td nowrap='true'>Sa, 11.3.:</td>
                     <td>09.00 - 13.00</td>
                     <td>09.00 - 13.00</td>
                 </tr>                
@@ -454,33 +454,33 @@
                 </tr>
                 <tr>
                     <td nowrap='true'>Mo:</td>
-                    <td>07:30 – 21:00 Uhr</td>
-                    <td>14.30 - 21.00 Uhr</td>
+                    <td>07:30 – 21:00</td>
+                    <td>14.30 - 21.00</td>
                 </tr>
                 <tr>
                     <td nowrap='true'>Di:</td>
-                    <td>08:00 – 21:00 Uhr</td>
-                    <td>10.00 - 12.00 Uhr</td>
+                    <td>08:00 – 21:00</td>
+                    <td>10.00 - 12.00</td>
                 </tr>
                 <tr>
                     <td nowrap='true'>Mi:</td>
-                    <td>07:30 – 21:00 Uhr</td>
-                    <td>14.30 - 21.00 Uhr</td>
+                    <td>07:30 – 21:00</td>
+                    <td>14.30 - 21.00</td>
                 </tr>
                 <tr>
                     <td nowrap='true'>Do:</td>
-                    <td>07:30 – 21:00 Uhr</td>
-                    <td>10.00 - 12.00 Uhr</td>
+                    <td>07:30 – 21:00</td>
+                    <td>10.00 - 12.00</td>
                 </tr>
                 <tr>
                     <td nowrap='true'>Fr:</td>
-                    <td>08:00 – 20:00 Uhr</td>
-                    <td>14.00 - 20.00 Uhr</td>
+                    <td>08:00 – 20:00</td>
+                    <td>14.00 - 20.00</td>
                 </tr>
                 <tr>
                     <td nowrap='true'>Sa:</td>
-                    <td>09:00 – 13:00 Uhr</td>
-                    <td>09.00 - 13.00 Uhr</td>
+                    <td>09:00 – 13:00</td>
+                    <td>09.00 - 13.00</td>
                 </tr>
             </table>                        
         </div>
