Link from each page top operning hours on index, change other details

--- a/fitness.html
+++ b/fitness.html
@@ -202,16 +202,8 @@
                             <div class="modal-body">
                                 <p>
                                     Für Einführungen, Überprüfungen des Trainingsplanes und bei allgemeinen Fragen
-                                    betreuen wir Sie zu folgenden Zeiten spezifisch im Fitnessraum:
+                                    betreuen wir Sie <a href="index.html#SpezielleOeffnungszeiten">zu den unter "Betreut" angegebenen Öffnungszeiten</a> spezifisch im Fitnessraum
                                 </p>
-                                <table>
-                                    <tr><td valign="top"><b>Mo&nbsp;</b></td><td>12 – 20 Uhr</td></tr>
-                                    <tr><td valign="top"><b>Di&nbsp;</b></td><td>14 – 21 Uhr</td></tr>
-                                    <tr><td valign="top"><b>Mi&nbsp;</b></td><td>14 – 21 Uhr</td></tr>
-                                    <tr><td valign="top"><b>Do&nbsp;</b></td><td>–</td></tr>
-                                    <tr><td valign="top"><b>Fr&nbsp;</b></td><td>10 – 12 Uhr</td></tr>
-                                    <tr><td valign="top"><b>Sa&nbsp;</b></td><td>9 – 13 Uhr</td></tr>
-                                </table>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Schliessen</button>
@@ -231,26 +223,7 @@
                 <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
             <h2>Geschäftsöffnungszeiten</h2>
-            <table>
-                <tr>
-                    <td>
-                        Mo:&nbsp;<br/>
-                        Di:&nbsp;<br/>
-                        Mi:&nbsp;<br/>
-                        Do:&nbsp;<br/>
-                        Fr:&nbsp;<br/>
-                        Sa:&nbsp;
-                    </td>
-                    <td nowrap="true"><!-- TODO: Proper alignment -->
-                        07:30 – 20:00 Uhr<br/>
-                        08:00 – 21:00 Uhr<br/>
-                        08:00 – 21:00 Uhr<br/>
-                        07:30 – 20:00 Uhr<br/>
-                        08:00 – 12:00 Uhr, 15:00 – 21:00 Uhr<br/>
-                        09:00 – 13:00 Uhr
-                    </td>
-                </tr>
-            </table>
+            <p>Bitte beachten Sie die <a href="index.html#SpezielleOeffnungszeiten">geänderten Öffnungszeiten ab 20.02.2017</a></p>     
         </div>
     </div>
 </div>
