--- a/kontakt.html
+++ b/kontakt.html
@@ -101,26 +101,7 @@
                 </div>
             </div>
             <h2>Geschäftsöffnungszeiten</h2>
-            <table>
-                <tr>
-                    <td>
-                        Mo:&nbsp;<br/>
-                        Di:&nbsp;<br/>
-                        Mi:&nbsp;<br/>
-                        Do:&nbsp;<br/>
-                        Fr:&nbsp;<br/>
-                        Sa:&nbsp;
-                    </td>
-                    <td nowrap="true"><!-- TODO: Proper alignment -->
-                        07:30 – 20:00 Uhr<br/>
-                        08:00 – 21:00 Uhr<br/>
-                        08:00 – 21:00 Uhr<br/>
-                        07:30 – 20:00 Uhr<br/>
-                        08:00 – 12:00 Uhr, 15:00 – 21:00 Uhr<br/>
-                        09:00 – 13:00 Uhr
-                    </td>
-                </tr>
-            </table>
+            <p>Bitte beachten Sie die <a href="index.html#SpezielleOeffnungszeiten">geänderten Öffnungszeiten ab 20.02.2017</a></p>  
         </div>
     </div>
 </div>
