--- a/ursula.hoevelmann.html
+++ b/ursula.hoevelmann.html
@@ -110,7 +110,7 @@
             <!-- reactive vertical space -->
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
             <h2>Ursula&nbsp;Hövelmann</h2>
-            <p>Physiotherapeutin (Bachelor NL/Professional Master)<br/><a href="mailto:ursula.hoevelmann@physiomovimento.ch">ursula.hoevelmann@physiomovimento.ch</a></p>
+            <p>Physiotherapeutin (Bachelor NL/Master of Profession)<br/><a href="mailto:ursula.hoevelmann@physiomovimento.ch">ursula.hoevelmann@physiomovimento.ch</a></p>
         </div>
     </div>
     <div class="row section">
@@ -177,27 +177,7 @@
                 <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
             <h2>Geschäftsöffnungszeiten</h2>
-            <table>
-                <tr>
-                    <td>
-                        Mo:&nbsp;<br/>
-                        Di:&nbsp;<br/>
-                        Mi:&nbsp;<br/>
-                        Do:&nbsp;<br/>
-                        Fr:&nbsp;<br/>
-                        Sa:&nbsp;
-                    </td>
-                    <td nowrap="true"><!-- TODO: Proper alignment -->
-                        07:30 – 20:00 Uhr<br/>
-                        08:00 – 21:00 Uhr<br/>
-                        08:00 – 21:00 Uhr<br/>
-                        07:30 – 20:00 Uhr<br/>
-                        08:00 – 12:00 Uhr, 15:00 – 21:00 Uhr<br/>
-                        09:00 – 13:00 Uhr
-                    </td>
-                </tr>
-            </table>
-        </div>
+            <p>Bitte beachten Sie die <a href="index.html#SpezielleOeffnungszeiten">geänderten Öffnungszeiten ab 20.02.2017</a></p>          </div>
     </div>
 </div>
 <div class="tile"></div>
