Add Ursula's picture

--- a/team.html
+++ b/team.html
@@ -168,7 +168,7 @@
                         Mehr&hellip;
                     </a>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/portrait-placeholder.png">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/ursula.jpg">
             </div>
         </div>
     </div>
