Remove old opening hours

--- a/index.html
+++ b/index.html
@@ -316,35 +316,8 @@
                 061 963 00 23<br/>
                 <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
-            <h2>Geschäftsöffnungszeiten bis 18.2.2017</h2>
-            <table>
-                <tr>
-                    <td nowrap='true'>Mo:</td>
-                    <td>07:30 – 20:00 Uhr</td>
-                </tr>
-                <tr>
-                    <td nowrap='true'>Di:</td>
-                    <td>08:00 – 20:00 Uhr</td>
-                </tr>
-                <tr>
-                    <td nowrap='true'>Mi:</td>
-                    <td>08:00 – 21:00 Uhr</td>
-                </tr>
-                <tr>
-                    <td nowrap='true'>Do:</td>
-                    <td>07:30 – 20:00 Uhr</td>
-                </tr>
-                <tr>
-                    <td nowrap='true'>Fr:</td>
-                    <td><nobr>08:00 – 12:00 Uhr, <wbr/>15:00 – 21:00 Uhr</nobr></td>
-                </tr>
-                <tr>
-                    <td nowrap='true'>Sa:</td>
-                    <td>09:00 – 13:00 Uhr</td>
-                </tr>
-            </table>   
             <a name="SpezielleOeffnungszeiten"></a>            
-            <h2 class="preliminary">Spezielle Öffnungszeiten 20.2. - 11.3.2017</h2>
+            <h2 class="preliminary">Spezielle Öffnungszeiten 6.3. - 11.3.2017</h2>
             <table>
                 <tr>                
                     <th/>
@@ -352,76 +325,14 @@
                     <th>Betreut</th>                       
                 </tr>
                 <tr>
-                    <td nowrap='true'>Mo, 20.2.:</td>
-                    <td>07:30 – 20:00</td>
-                    <td>14.30 - 20.00</td>
-                </tr>
-                <tr>
-                    <td nowrap='true'>Di, 21.2.:</td>
-                    <td><nobr><strong>08.00 - 12.00, <wbr/>15.00 - 21.00</strong></nobr></td>
-                    <td>10.00 - 12.00</td>
-                </tr>
-                <tr>
-                    <td nowrap='true'>Mi, 22.2.:</td>
-                    <td>08.00 - 21.00</td>
-                    <td>14.30 - 21.00</td>
-                </tr>
-                <tr>
-                    <td nowrap='true'>Do, 23.2.:</td>
-                    <td>07.30 - 20.00</td>
-                    <td>10.00 - 12.00</td>
-                </tr>
-                <tr>
-                    <td nowrap='true'>Fr, 24.2.:</td>
-                    <td>08.00 - 21.00</td>
-                    <td>14.00 - 21.00</td>
-                </tr>
-                <tr>
-                    <td nowrap='true'>Sa, 25.2.:</td>
-                    <td>09.00 - 13.00</td>
-                    <td>09.00 - 13.00</td>
-                </tr>
-                <tr><td>&nbsp;</td><tr/>
-                <tr>
-                    <td nowrap='true'>Mo, 27.2.:</td>
-                    <td>07.30 - 20.00</td>
-                    <td>14.00 - 20.00</td>
-                </tr>
-                <tr>
-                    <td nowrap='true'>Di, 27.2.:</td>
-                    <td><nobr><strong>08.00 - 12.00, <wbr/>15.00 - 21.00</strong></nobr></td>
-                    <td>10.00 - 12.00</td>
-                </tr>
-                <tr>
-                    <td nowrap='true'>Mi, 1.3.:</td>
-                    <td>08.00 - 21.00</td>
-                    <td>14.30 - 21.00</td>
-                </tr>
-                <tr>
-                    <td nowrap='true'>Do, 2.3.:</td>
-                    <td>07.30 - 20.00</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td nowrap='true'>Fr, 3.3.:</td>
-                    <td>08.00 - 21.00</td>
-                    <td>14.00 - 21.00</td>
-                </tr>
-                <tr>
-                    <td nowrap='true'>Sa, 4.3.:</td>
-                    <td>09.00 - 13.00</td>
-                    <td>09.00 - 13.00</td>
-                </tr>
-                <tr><td>&nbsp;</td><tr/>
-                <tr>
                     <td nowrap='true'>Mo, 6.3.:</td>
                     <td>07.30 - 20.00</td>
-                    <td></td>
+                    <td>&mdash;</td>
                 </tr>
                 <tr>
                     <td nowrap='true'>Di, 7.3.:</td>
                     <td>08.00 - 21.00</td>
-                    <td></td>
+                    <td>&mdash;</td>
                 </tr>
                 <tr>
                     <td nowrap='true'>Mi, 8.3.:</td>
