--- a/team.html
+++ b/team.html
@@ -164,7 +164,7 @@
                         Physiotherapeutin (Bachelor NL/Master of Profession)
                         <a href="mailto:ursula.hoevelmann@physiomovimento.ch">ursula.hoevelmann@physiomovimento.ch</a>
                     </p>
-                    <a href="ursula.hoevelmann.html" role="button">
+                    <a href="ursula-hoevelmann.html" role="button">
                         Mehr&hellip;
                     </a>
                 </div>
